product-feat-2. basic product and category CRUD
