# back/ecommerce/src/main/java/com/cho/ecommerce/domain/product/entity/ProductEntity.java
@@ -1,0 +1,43 @@
+package com.cho.ecommerce.domain.product.entity;
+
+import java.util.Set;
+import javax.persistence.Column;
+import javax.persistence.Entity;
+import javax.persistence.GeneratedValue;
+import javax.persistence.GenerationType;
+import javax.persistence.Id;
+import javax.persistence.JoinColumn;
+import javax.persistence.ManyToOne;
+import javax.persistence.OneToMany;
+import javax.persistence.Table;
+
+@Entity
+@Table(name = "PRODUCT")
+public class ProductEntity {
+    
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "PRODUCT_ID")
+    private Long productId;
+    
+    @Column(name = "NAME")
+    private String name;
+    
+    @Column(name = "DESCRIPTION")
+    private String description;
+    
+    @Column(name = "RATING")
+    private Double rating;
+    
+    @Column(name = "RATING_COUNT")
+    private Integer ratingCount;
+    
+    @ManyToOne
+    @JoinColumn(name = "CATEGORY_ID")
+    private CategoryEntity category;
+    
+    @OneToMany(mappedBy = "product")
+    private Set<ProductItemEntity> productItems;
+    
+    // getters, setters, and other methods
+}
